2005-06-08	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug which occurred if a constant set was created
	  in a procedure through the CONST construct.
	* fixed a number of -Wextended-opaque issues in gm2/bnf/m2-h.bnf
	* modified gm2/Make-lang.in to use -Wextended-opaque (for testing)

2005-06-07	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug which occurred if an enumerated type field
	  was imported by another module.
	  (See testsuite/gm2/pim/pass/set10.mod)
        * fixed circular dependancy bug in record generation.

2005-06-03	Gaius Mulley <gaius@glam.ac.uk>

	* reverted some of the changes made to the ulm libraries
	  in the light of fixing arrays with huge indices.
	* mofified gm2/bnf/m2-h.bnf so that expressions within
	  statement sequences are ignored.

2005-06-02	Gaius Mulley <gaius@glam.ac.uk>

	* gm2/gccgm2.c fixed BuildArrayIndexType so that gm2 can build
	  arrays which have huge indices. This removes a failure from
	  the regression tests on systems which have a 32 bit long.

2005-06-01	Gaius Mulley <gaius@glam.ac.uk>

	* gm2/Make-file.in altered grep -e to aid portability under
	  Solaris (as reported by john o goyo <jgoyo@ca.inter.net>).
	* gm2/examples/server added example of a threaded server
	  which uses the executive, transfer and iotransfer.
	* gm2/examples/executive/Executive added KillProcess.
	* gm2/gm2-libs-coroutines/SysVec.mod fixed vector selection
	  bug.

2005-05-27	Gaius Mulley <gaius@glam.ac.uk>

	* gm2/gccgm2.c fixed to detect array indices which exceed
          sizetype.
        * gm2/lang-specs.h fixed to propagate the -Wcpp flags though
	  to gm2 subcomponents.

2005-05-25	Michel Derosa <derosa@videotron.ca>

	* applied patches to gm2/gm2.texi which describe FreeBSD
	  build instructions.

2005-05-19	Gaius Mulley <gaius@glam.ac.uk>

	* rebuilt gm2/gm2-libs/configure
	* gm2/gm2.texi added section heading for advice on building
	  GNU Modula-2 under FreeBSD 5.3

2005-05-19	Michel Derosa <derosa@videotron.ca>
