@@ -19,10 +19,10 @@ DEFINITION MODULE M2Options ;
 (*
    Author     : Gaius Mulley
    Title      : M2Options
-   Date       : 27/5/87  [$Date: 2004/10/19 19:43:28 $]
+   Date       : 27/5/87  [$Date: 2005/06/17 13:56:48 $]
    SYSTEM     : UNIX (GNU Modula-2)
    Description: Initializes the user options in the Modula-2 compiler.
-   Version    : $Revision: 1.9 $
+   Version    : $Revision: 1.10 $
 *)
 
 FROM DynamicStrings IMPORT String ;
@@ -37,7 +37,7 @@ EXPORT QUALIFIED IsAnOption, IsAnOptionAndArg, ParseOptions, ScanCppArgs,
                  StudentChecking,
                  BoundsChecking, ReturnChecking, NilChecking, CaseElseChecking,
                  Quiet, LineDirectives, CPreProcessor, ExtendedOpaque,
-                 PedanticParamNames,
+                 PedanticParamNames, PedanticCast,
       	       	 DisplayQuadruples,
                  CompilerDebugging, GenerateDebugging, GenerateLineDebug,
                  CppCommandLine ;
@@ -53,6 +53,7 @@ VAR
    Verbose,                      (* -verbose produce verbose error messages. *)
    Pedantic,                     (* -pedantic be pedantic on error checking. *)
    PedanticParamNames,           (* -Wpedantic-param-names                   *)
+   PedanticCast,                 (* -Wpedantic-cast warns if sizes differ.   *)
    Statistics,                   (* -statistics information about code       *)
    StudentChecking,              (* -students checks for common student errs *)
    DisplayQuadruples,            (* -q option will display quadruples.       *)
